# abm-from-data

./: .gitignore  Bee.py  BeeModel.py  LICENSE  README.md  demo.ipynb  pyproject.toml
calibration-tools/: Sampling.py
model/: Bee.py  BeeModel.py  DifferentiableBeeModel.py  Flower.py  demo.ipynb  generate_simulated_data.py  plot.r  train_differentiable_abm.py
